--- a/Remotion/Data/DomainObjects.Web.Test/Data.DomainObjects.Web.Test.csproj
+++ b/Remotion/Data/DomainObjects.Web.Test/Data.DomainObjects.Web.Test.csproj
@@ -432,7 +432,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>27872</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:60400/fx-develop/Data.DomainObjects.Web.Test/</IISUrl>
+          <IISUrl>http://localhost:60400/fx-5.x/Data.DomainObjects.Web.Test/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
