--- a/Remotion/ObjectBinding/Web.Test/ObjectBinding.Web.Test.csproj
+++ b/Remotion/ObjectBinding/Web.Test/ObjectBinding.Web.Test.csproj
@@ -688,7 +688,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50373</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:60400/fx-develop/ObjectBinding.Web.Test/</IISUrl>
+          <IISUrl>http://localhost:60400/fx-5.x/ObjectBinding.Web.Test/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
