--- a/Remotion/Data/DomainObjects/Data.DomainObjects.csproj
+++ b/Remotion/Data/DomainObjects/Data.DomainObjects.csproj
@@ -26,7 +26,7 @@
   <ItemGroup>
     <PackageReference Include="Remotion.Linq" Version="2.2.0" />
     <PackageReference Include="Remotion.Linq.EagerFetching" Version="2.2.0" />
-    <PackageReference Include="Remotion.Linq.SqlBackend" Version="2.1.1" />
+    <PackageReference Include="Remotion.Linq.SqlBackend" Version="2.2.0-beta.1" />
     <PackageReference Include="Remotion.TypePipe" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
