--- a/Remotion/Core/UnitTests/Core.UnitTests.csproj
+++ b/Remotion/Core/UnitTests/Core.UnitTests.csproj
@@ -46,14 +46,24 @@
     <PackageReference Include="System.CodeDom" Version="7.0.0" GeneratePathProperty="true" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" GeneratePathProperty="true" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
+    <PackageReference Include="System.CodeDom" Version="8.0.0-preview.6.23329.7" GeneratePathProperty="true" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0-preview.6.23329.7" GeneratePathProperty="true" />
+  </ItemGroup>
   <Target Name="CopySystemConfigurationConfigurationManager" AfterTargets="ResolveAssemblyReferences" Condition="'$(PkgSystem_Configuration_ConfigurationManager)' != ''">
-    <ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net7.0-windows'">
       <ReferenceCopyLocalPaths Include="$(PkgSystem_Configuration_ConfigurationManager)/lib/net7.0/System.Configuration.ConfigurationManager.dll"/>
+    </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
+      <ReferenceCopyLocalPaths Include="$(PkgSystem_Configuration_ConfigurationManager)/lib/net8.0/System.Configuration.ConfigurationManager.dll"/>
     </ItemGroup>
   </Target>
   <Target Name="CopySystemCodeDom" AfterTargets="ResolveAssemblyReferences" Condition="'$(PkgSystem_CodeDom)' != ''">
-    <ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net7.0-windows'">
       <ReferenceCopyLocalPaths Include="$(PkgSystem_CodeDom)/lib/net7.0/System.CodeDom.dll"/>
+    </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
+      <ReferenceCopyLocalPaths Include="$(PkgSystem_CodeDom)/lib/net8.0/System.CodeDom.dll"/>
     </ItemGroup>
   </Target>
   <!-- END: ensure that required DLLs available in output directory for IsolatedCodeRunner to work correctly. -->
