--- a/SecurityManager/Clients.Web.Test/SecurityManager.Clients.Web.Test.csproj
+++ b/SecurityManager/Clients.Web.Test/SecurityManager.Clients.Web.Test.csproj
@@ -106,6 +106,10 @@
       <Project>{81E5BEC0-B845-4470-BD19-9FCB121CB413}</Project>
       <Name>Data.DomainObjects.UberProfIntegration</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Remotion\Data\DomainObjects.Validation\Data.DomainObjects.Validation.csproj">
+      <Project>{04fa07e3-b868-4846-a5e2-4d375f607c22}</Project>
+      <Name>Data.DomainObjects.Validation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Remotion\Data\DomainObjects\Data.DomainObjects.csproj">
       <Project>{C2D4102A-6DB9-4997-85BE-AFA6ECF42F1A}</Project>
       <Name>Data.DomainObjects</Name>
@@ -132,6 +136,14 @@
       <Project>{FDCCDB1E-0962-41DA-99A1-2DB390C48748}</Project>
       <Name>ObjectBinding.Core</Name>
       <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Remotion\ObjectBinding\Validation\ObjectBinding.Validation.csproj">
+      <Project>{a00dd42f-48b0-4e49-b79a-9cd7f401a9f1}</Project>
+      <Name>ObjectBinding.Validation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Remotion\ObjectBinding\Web.Validation\ObjectBinding.Web.Validation.csproj">
+      <Project>{1abecbff-e3bc-4d02-af23-52094cee41de}</Project>
+      <Name>ObjectBinding.Web.Validation</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Remotion\ObjectBinding\Web\ObjectBinding.Web.csproj">
       <Project>{390FBB93-A757-47A7-B769-A64A7465FF84}</Project>
