--- a/Remotion/Data/DomainObjects.Web.Test/packages.config
+++ b/Remotion/Data/DomainObjects.Web.Test/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Remotion.Infrastructure.Styles.Analyzer" version="1.1.3" targetFramework="net48" developmentDependency="true" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net48" />
-  <package id="Remotion.TypePipe" version="3.2.0-beta.1" targetFramework="net48" />
+  <package id="Remotion.TypePipe" version="3.2.0" targetFramework="net48" />
 </packages>
