--- a/Remotion/Integration/Domain/Integration.Domain.csproj
+++ b/Remotion/Integration/Domain/Integration.Domain.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <PackageReference Include="Remotion.IO" version="3.0.0" />
     <PackageReference Include="Remotion.IO.Archive.Zip" version="3.0.0" />
-    <PackageReference Include="Remotion.TypePipe" version="3.2.0-beta.1" />
+    <PackageReference Include="Remotion.TypePipe" version="3.2.0" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
