--- a/Remotion/ObjectBinding/Web.Compatibility.UnitTests/ObjectBinding.Web.Compatibility.UnitTests.csproj
+++ b/Remotion/ObjectBinding/Web.Compatibility.UnitTests/ObjectBinding.Web.Compatibility.UnitTests.csproj
@@ -10,7 +10,11 @@
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\SharedSource\Development\NUnit\UnitTesting\**\*.cs" Link="SharedSource\NUnit\UnitTesting\%(RecursiveDir)%(Filename)%(Extension)" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\Core\Core.Core.csproj" />
+    <ProjectReference Include="..\..\Globalization\Core\Globalization.Core.csproj" />
     <ProjectReference Include="..\..\Web\Core\Web.Core.csproj" />
     <ProjectReference Include="..\Core\ObjectBinding.Core.csproj" />
     <ProjectReference Include="..\Web.Compatibility\ObjectBinding.Web.Compatibility.csproj" />
