--- a/Remotion/Core/Core/Core.Core.csproj
+++ b/Remotion/Core/Core/Core.Core.csproj
@@ -20,6 +20,8 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.15" />
     <PackageReference Remove="JetBrains.Annotations" />
+    <PackageReference Include="Remotion.ThirdParty.Dependency.Jetbrains.Annotations" Version="2022.1.0" />
+    <PackageReference Include="Remotion.ThirdPartyDependency.CommonServiceLocator" Version="2.0.6" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
     <Reference Include="System.Configuration" />
