--- a/Remotion/Core/Reflection.CodeGeneration.TypePipe/Core.Reflection.CodeGeneration.TypePipe.csproj
+++ b/Remotion/Core/Reflection.CodeGeneration.TypePipe/Core.Reflection.CodeGeneration.TypePipe.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\Core\Core.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Remotion.ThirdPartyDependency.DynamicLanguageRuntime" Version="1.1.0.10" />
     <PackageReference Include="Remotion.TypePipe" Version="3.2.0" />
     <PackageReference Remove="JetBrains.Annotations" />
   </ItemGroup>
