--- a/Remotion/Data/DomainObjects.Web.Test/Data.DomainObjects.Web.Test.csproj
+++ b/Remotion/Data/DomainObjects.Web.Test/Data.DomainObjects.Web.Test.csproj
@@ -190,6 +190,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Query1QueryFileFinder.cs" />
     <Compile Include="Domain\Color.cs" />
     <Compile Include="Domain\ColorExtensions.cs" />
     <Compile Include="Domain\LightColorExtensions.cs" />
@@ -275,6 +276,7 @@
       <DependentUpon>NewObject.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Query2QueryFileFinder.cs" />
     <Compile Include="SearchObject.aspx.cs">
       <DependentUpon>SearchObject.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
