RM-8985 Replace AppConfigBasedSettingsProvider with IoC implementation

--- a/Remotion/Data/DomainObjects.ObjectBinding.UnitTests/Data.DomainObjects.ObjectBinding.UnitTests.csproj
+++ b/Remotion/Data/DomainObjects.ObjectBinding.UnitTests/Data.DomainObjects.ObjectBinding.UnitTests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core\Core.Core.csproj" />
+    <ProjectReference Include="..\..\Core\Reflection.CodeGeneration.TypePipe\Core.Reflection.CodeGeneration.TypePipe.csproj" />
     <ProjectReference Include="..\..\Core\Reflection\Core.Reflection.csproj" />
     <ProjectReference Include="..\..\Core\Tools\Core.Tools.csproj" />
     <ProjectReference Include="..\..\Development\Core\Development.Core.csproj" />
