RM-7630 Collate JavaScript files from Web.ClientScript to a single file

--- a/Remotion/Web/ClientScript/tsconfig/release/tsconfig.json
+++ b/Remotion/Web/ClientScript/tsconfig/release/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../bin/Release/dist",
+    "outFile": "../../bin/Release/dist/Remotion.Web.ClientScript.js",
     "noEmit": false,
 
     "sourceMap": false,
