RM-7630 Collate JavaScript files from ObjectBinding.Web.ClientScript to a single file

--- a/Remotion/ObjectBinding/Web.ClientScript/tsconfig/debug/tsconfig.json
+++ b/Remotion/ObjectBinding/Web.ClientScript/tsconfig/debug/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../bin/Debug/dist",
+    "outFile": "../../bin/Debug/dist/Remotion.ObjectBinding.Web.ClientScript.js",
     "noEmit": false,
 
     "sourceMap": true,
