--- a/Remotion/ObjectBinding/Web.ClientScript/tsconfig/release/tsconfig.json
+++ b/Remotion/ObjectBinding/Web.ClientScript/tsconfig/release/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../bin/Release/dist",
+    "outFile": "../../bin/Release/dist/Remotion.ObjectBinding.Web.ClientScript.js",
     "noEmit": false,
 
     "sourceMap": false,
