RM-8989 wrap execution engine configuration with ioc based system

--- a/Remotion/Web/Test.NetFramework/Web.config
+++ b/Remotion/Web/Test.NetFramework/Web.config
@@ -5,7 +5,7 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
 	<remotion.web xmlns="http://www.re-motion.org/web/configuration">
-		<executionEngine urlMappingFile="~/bin/UrlMapping.xml" functionTimeout="16" refreshInterval="5" defaultWxeHandler="~/WxeHandler.ashx" />
+		<executionEngine functionTimeout="16" refreshInterval="5"/>
 	</remotion.web>
 <log4net debug="true">
   <appender name="TraceAppender" type="log4net.Appender.TraceAppender, log4net">
