--- a/SecurityManager/Clients.Web.Test/Web.config
+++ b/SecurityManager/Clients.Web.Test/Web.config
@@ -9,7 +9,7 @@
   </configSections>
 
   <remotion.web xmlns="http://www.re-motion.org/web/configuration">
-    <executionEngine functionTimeout="20" refreshInterval="10" defaultWxeHandler="WxeHandler.ashx" urlMappingFile="~/UrlMapping.xml" />
+    <executionEngine functionTimeout="20" refreshInterval="10" />
   </remotion.web>
 
   <remotion.data.domainObjects xmlns="http://www.re-motion.org/Data/DomainObjects/Configuration/2.1">
