RM-7705 Add a TS project reference between ObjectBinding.Web.ClientScripts and Web.ClientScripts

--- a/Remotion/ObjectBinding/Web.ClientScript/ObjectBinding.Web.ClientScript.csproj
+++ b/Remotion/ObjectBinding/Web.ClientScript/ObjectBinding.Web.ClientScript.csproj
@@ -9,6 +9,7 @@
     <Description>Client Scripts for re-motion's ObjectBinding web controls.</Description>
     <AssemblyName>Remotion.ObjectBinding.Web.ClientScript</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
+    <TypeScriptBuildMode>true</TypeScriptBuildMode>
   </PropertyGroup>
   <ItemGroup>
     <TypeScriptCompile Include="..\..\Web\ClientScript\Scripts\typings\common.d.ts">
