--- a/Remotion/ObjectBinding/Web.ClientScript/tsconfig/release/tsconfig.json
+++ b/Remotion/ObjectBinding/Web.ClientScript/tsconfig/release/tsconfig.json
@@ -6,5 +6,10 @@
 
     "sourceMap": false,
     "inlineSources": false
-  }
+  },
+  "references": [
+    {
+      "path": "../../../../Web/ClientScript/tsconfig/release"
+    }
+  ]
 }
