--- a/Remotion/Web/ClientScript/tsconfig.json
+++ b/Remotion/Web/ClientScript/tsconfig.json
@@ -6,6 +6,9 @@
     "noEmit": true,
     "strict": true,
 
+    "composite": true,
+    "baseUrl": "./Scripts/",
+
     "allowJs": true
   },
   "include": [
