--- a/Remotion/ObjectBinding/Web.ClientScript/tsconfig/debug/tsconfig.json
+++ b/Remotion/ObjectBinding/Web.ClientScript/tsconfig/debug/tsconfig.json
@@ -6,5 +6,10 @@
 
     "sourceMap": true,
     "inlineSources": true
-  }
+  },
+  "references": [
+    {
+      "path": "../../../../Web/ClientScript/tsconfig/debug"
+    }
+  ]
 }
