RM-7635 Document how the TypeScript build infrastructure works

--- a/Remotion/ObjectBinding/Web.ClientScript/ObjectBinding.Web.ClientScript.csproj
+++ b/Remotion/ObjectBinding/Web.ClientScript/ObjectBinding.Web.ClientScript.csproj
@@ -19,5 +19,10 @@
   <ItemGroup>
     <PackageReference Include="Remotion.ThirdPartyDependency.JQuery.Autocomplete" Version="1.1.0-pre" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\Web\ClientScript\README.md">
+      <Link>README.md</Link>
+    </Content>
+  </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
