--- a/Remotion/Core/Core/Core.Core.csproj
+++ b/Remotion/Core/Core/Core.Core.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
   <!-- Including System.Configuration.ConfigurationManager is required because log4net takes a hard dependency on an older version of this assembly. -->
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0-rc.2.23479.6" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
   <ItemGroup>
