RM-9035 Clenaup for missed details in WebConfiguration tasks

--- a/Remotion/Web/Test.NetFramework/Web.config
+++ b/Remotion/Web/Test.NetFramework/Web.config
@@ -4,7 +4,7 @@
 		<section name="remotion.web" type="Remotion.Web.Configuration.WebConfiguration, Remotion.Web" />
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
-	<remotion.web xmlns="http://www.re-motion.org/web/configuration">
+	<remotion.web xmlns="http://www.re-motion.org/web/configuration/v2">
 		<executionEngine functionTimeout="16" refreshInterval="5"/>
 	</remotion.web>
 <log4net debug="true">
