--- a/SecurityManager/Clients.Web.Test/Web.config
+++ b/SecurityManager/Clients.Web.Test/Web.config
@@ -8,7 +8,7 @@
     </sectionGroup>
   </configSections>
 
-  <remotion.web xmlns="http://www.re-motion.org/web/configuration">
+  <remotion.web xmlns="http://www.re-motion.org/web/configuration/v2">
     <executionEngine functionTimeout="20" refreshInterval="10" />
   </remotion.web>
 
