--- a/SecurityManager/Clients.Web.Test/SecurityManager.Clients.Web.Test.csproj
+++ b/SecurityManager/Clients.Web.Test/SecurityManager.Clients.Web.Test.csproj
@@ -58,7 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
-    <Content Include="UrlMapping.xml" />
+    <Content Include="UrlMapping.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
