--- a/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite/ObjectBinding.Web.Development.WebTesting.TestSite.csproj
+++ b/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite/ObjectBinding.Web.Development.WebTesting.TestSite.csproj
@@ -52,7 +52,7 @@
       <HintPath>..\..\..\packages\Fork.JetBrains.Annotations.11.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
-      <HintPath>..\..\..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+      <HintPath>..\..\..\packages\log4net.2.0.15\lib\net45\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
