--- a/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite/App.config
+++ b/Remotion/ObjectBinding/Web.Development.WebTesting.TestSite/App.config
@@ -9,6 +9,10 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
 
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+
   <system.web>
     <globalization culture="de-AT" uiCulture="en-US"/>
     <compilation debug="true" />
