--- a/Remotion/ObjectBinding/Web.Test/ObjectBinding.Web.Test.csproj
+++ b/Remotion/ObjectBinding/Web.Test/ObjectBinding.Web.Test.csproj
@@ -205,6 +205,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UrlMappingFileFinder.cs" />
     <Compile Include="IndividualControlTests\BocDropDownMenuUserControl.cs">
       <DependentUpon>BocDropDownMenuUserControl.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -621,6 +622,7 @@
     </Content>
     <Content Include="UrlMapping.xml">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Validation\TestUserControl.ascx" />
     <Content Include="ViewLayoutTests\Form.aspx" />
