--- a/Remotion/Web/IntegrationTests/App.config
+++ b/Remotion/Web/IntegrationTests/App.config
@@ -45,7 +45,7 @@
       </layout>
     </appender>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value=".\WebTestingOutput\Web.WebTestingFramework.log" />
+      <file value=".\WebTestingOutput\Web.IntegrationTests.log" />
       <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
