--- a/Remotion/Web/Development.WebTesting.UnitTests/Web.Development.WebTesting.UnitTests.csproj
+++ b/Remotion/Web/Development.WebTesting.UnitTests/Web.Development.WebTesting.UnitTests.csproj
@@ -14,5 +14,10 @@
     <ProjectReference Include="..\..\Development\Core\Development.Core.csproj" />
     <ProjectReference Include="..\Development.WebTesting\Web.Development.WebTesting.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
