RM-9070 Upgrade chrome to v121

--- a/Remotion/Web/Development.WebTesting.IntegrationTests.RequireUI/App.config
+++ b/Remotion/Web/Development.WebTesting.IntegrationTests.RequireUI/App.config
@@ -37,7 +37,7 @@
         <add path="..\..\Web\Development.WebTesting.TestSite.Shared" />
       </resources>
     </testSiteLayout>
-    <chrome disableSecurityWarningsBehavior="Ignore" />
+    <chrome disableSecurityWarningsBehavior="Automatic" />
     <edge disableSecurityWarningsBehavior="Ignore" />
   </remotion.webTesting>
   <log4net>
