--- a/Remotion/Core/UnitTests/Core.UnitTests.csproj
+++ b/Remotion/Core/UnitTests/Core.UnitTests.csproj
@@ -46,6 +46,9 @@
     <PackageReference Include="System.CodeDom" Version="8.0.0" GeneratePathProperty="true" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" GeneratePathProperty="true" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration\TypeDiscovery\IntegrationTests\" />
+  </ItemGroup>
   <Target Name="CopySystemConfigurationConfigurationManager" AfterTargets="ResolveAssemblyReferences" Condition="'$(PkgSystem_Configuration_ConfigurationManager)' != ''">
     <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
       <ReferenceCopyLocalPaths Include="$(PkgSystem_Configuration_ConfigurationManager)/lib/net8.0/System.Configuration.ConfigurationManager.dll"/>
