--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -20,7 +20,9 @@
     <PackageVersion Include="log4net" Version="2.0.17" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.NUnit" Version="1.1.1" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.2" />
+    <PackageVersion Include="Microsoft.Extensions.Diagnostics.Testing" Version="8.4.0" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Net.Compilers.Toolset" Version="4.10.0-3.final" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
