--- a/Remotion/Core/Extensions/Core.Extensions.csproj
+++ b/Remotion/Core/Extensions/Core.Extensions.csproj
@@ -19,5 +19,8 @@
     <ProjectReference Include="..\Core\Core.Core.csproj" />
     <ProjectReference Include="..\Reflection\Core.Reflection.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+  </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
