--- a/Remotion/Core/UnitTests/Core.UnitTests.csproj
+++ b/Remotion/Core/UnitTests/Core.UnitTests.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\Core\Core.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.Testing" />
     <PackageReference Include="Microsoft.Net.Compilers.Toolset" GeneratePathProperty="true" ExcludeAssets="all" />
   </ItemGroup>
   <ItemGroup>
