--- a/Remotion/Core/Extensions/Core.Extensions.csproj
+++ b/Remotion/Core/Extensions/Core.Extensions.csproj
@@ -23,5 +23,8 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Transactions" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+  </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
