--- a/Remotion/Web/Test.NetFramework/Web.Test.NetFramework.csproj
+++ b/Remotion/Web/Test.NetFramework/Web.Test.NetFramework.csproj
@@ -204,7 +204,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50369</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:60400/fx-develop/Web.Test/</IISUrl>
+          <IISUrl>http://localhost:60400/fx-6.x/Web.Test/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
