RM-9166 Fix casing in resx files with language and region

--- a/Remotion/ObjectBinding/Web.Test/ObjectBinding.Web.Test.csproj
+++ b/Remotion/ObjectBinding/Web.Test/ObjectBinding.Web.Test.csproj
@@ -649,7 +649,7 @@
     <EmbeddedResource Include="Globalization\IndividualControlTests.BocReferenceValueUserControl.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Globalization\RMTest.de-at.resx">
+    <EmbeddedResource Include="Globalization\RMTest.de-AT.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Globalization\RMTest.de.resx">
