RM-9141 Replace usages Remotion.Logging API with Microsoft.Extensions.Logging in WebTesting libraries

--- a/Remotion/Web/Development.WebTesting/Web.Development.WebTesting.csproj
+++ b/Remotion/Web/Development.WebTesting/Web.Development.WebTesting.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Selenium.Support" />
     <PackageReference Include="Selenium.WebDriver" />
     <PackageReference Include="Microsoft.Extensions.Hosting" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" />
   </ItemGroup>
   <ItemGroup>
