RM-9206 Change required due to stronger enforcement of rules

--- a/Remotion/Core/Development.Analyzers/Core.Development.Analyzers.csproj
+++ b/Remotion/Core/Development.Analyzers/Core.Development.Analyzers.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>Remotion.Development.Analyzers</AssemblyName>
     <AssemblyTitle>Remotion Analyzers</AssemblyTitle>
     <Description>Analyzer ensuring best practices when using the Remotion assemblies.</Description>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Remove="$(MsBuildThisFileFullPath)"/>
