--- a/NuGet.config
+++ b/NuGet.config
@@ -1,8 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="re-motion Debug-Builds" value="https://nuget.re-motion.org/nuget/re-motion-debug/" />
+    <clear />
+    <add key="re-motion Dependencies" value="https://nuget.re-motion.org/nuget/re-motion-debug/" />
     <add key="re-motion Infrastructure" value="https://nuget.re-motion.org/nuget/re-motion-infrastructure/" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
+  <packageSourceMapping>
+    <packageSource key="re-motion Dependencies">
+      <package pattern="CoreForms.Web.*" />
+      <package pattern="Fork.Coypu" />
+      <package pattern="Remotion.*" />
+    </packageSource>
+    <packageSource key="re-motion Infrastructure">
+      <package pattern="DependDB.*" />
+      <package pattern="Moq.VerifiableSequence" />
+      <package pattern="Remotion.*" />
+    </packageSource>
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
