--- a/Remotion/Web/Development.WebTesting.IntegrationTests.Infrastructure/Web.Development.WebTesting.IntegrationTests.Infrastructure.csproj
+++ b/Remotion/Web/Development.WebTesting.IntegrationTests.Infrastructure/Web.Development.WebTesting.IntegrationTests.Infrastructure.csproj
@@ -17,7 +17,7 @@
     <ProjectReference Include="..\Development.WebTesting.ExecutionEngine\Web.Development.WebTesting.ExecutionEngine.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
-    <PackageReference Include="System.Text.Json" Version="8.0.3" />
+    <PackageReference Include="System.Text.Json" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
