--- a/Remotion/Core/UnitTests/Core.UnitTests.csproj
+++ b/Remotion/Core/UnitTests/Core.UnitTests.csproj
@@ -25,7 +25,7 @@
     <ProjectReference Include="..\Core\Core.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.10.0-3.final" GeneratePathProperty="true" ExcludeAssets="all" />
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" GeneratePathProperty="true" ExcludeAssets="all" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Reflection\TestDomain\ContextAwareTypeUtilityTest\app.config">
@@ -43,8 +43,8 @@
        NOTE: If the versions do not intersect, the file is always copied locally. This is the reason why no workaround is needed for .NET 6.
   -->
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
-    <PackageReference Include="System.CodeDom" Version="8.0.0" GeneratePathProperty="true" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" GeneratePathProperty="true" />
+    <PackageReference Include="System.CodeDom" GeneratePathProperty="true" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" GeneratePathProperty="true" />
   </ItemGroup>
   <Target Name="CopySystemConfigurationConfigurationManager" AfterTargets="ResolveAssemblyReferences" Condition="'$(PkgSystem_Configuration_ConfigurationManager)' != ''">
     <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
