--- a/Remotion/Data/DomainObjects.UnitTests/Data.DomainObjects.UnitTests.csproj
+++ b/Remotion/Data/DomainObjects.UnitTests/Data.DomainObjects.UnitTests.csproj
@@ -40,10 +40,10 @@
     <ProjectReference Include="..\Core\Data.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Remotion.Linq.EagerFetching" Version="2.2.0" />
-    <PackageReference Include="Remotion.Linq.Development" Version="2.2.0" />
-    <PackageReference Include="Remotion.Linq.SqlBackend.Development" Version="2.2.0" />
-    <PackageReference Include="Remotion.TypePipe.Development" Version="3.2.0" />
+    <PackageReference Include="Remotion.Linq.EagerFetching" />
+    <PackageReference Include="Remotion.Linq.Development" />
+    <PackageReference Include="Remotion.Linq.SqlBackend.Development" />
+    <PackageReference Include="Remotion.TypePipe.Development" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
     <Reference Include="System.Transactions" />
