--- a/Remotion/Development/Sandboxing.NUnit2.UnitTests/Development.Sandboxing.NUnit2.UnitTests.csproj
+++ b/Remotion/Development/Sandboxing.NUnit2.UnitTests/Development.Sandboxing.NUnit2.UnitTests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Remove="NUnit" />
-    <PackageReference Include="NUnit" Version="2.6.3" />
+    <PackageReference Include="NUnit" VersionOverride="2.6.3" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
