--- a/Remotion/Mixins/MixerTools.UnitTests/Mixins.MixerTools.UnitTests.csproj
+++ b/Remotion/Mixins/MixerTools.UnitTests/Mixins.MixerTools.UnitTests.csproj
@@ -26,8 +26,8 @@
     <ProjectReference Include="..\MixerTools\Mixins.MixerTools.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.10.0-3.final" GeneratePathProperty="true" ExcludeAssets="all" />
-    <PackageReference Include="Remotion.TypePipe.Development" Version="3.2.0" />
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" GeneratePathProperty="true" ExcludeAssets="all" />
+    <PackageReference Include="Remotion.TypePipe.Development" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
   <Import Project="..\..\Development\UnitTesting.Compilation\build\Remotion.Development.UnitTesting.Compilation.targets" />
