--- a/Remotion/Mixins/UnitTests/Mixins.UnitTests.csproj
+++ b/Remotion/Mixins/UnitTests/Mixins.UnitTests.csproj
@@ -22,7 +22,7 @@
     <ProjectReference Include="..\Samples\Mixins.Samples.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Remotion.TypePipe.Development" Version="3.2.0" />
+    <PackageReference Include="Remotion.TypePipe.Development" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
