--- a/Remotion/ObjectBinding/Sample/ObjectBinding.Sample.csproj
+++ b/Remotion/ObjectBinding/Sample/ObjectBinding.Sample.csproj
@@ -20,7 +20,7 @@
     <ProjectReference Include="..\Web\ObjectBinding.Web.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Remotion.TypePipe" Version="3.2.0" />
+    <PackageReference Include="Remotion.TypePipe" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="res" />
