--- a/Remotion/Web/Development.WebTesting.TestSite.Infrastructure/Web.Development.WebTesting.TestSite.Infrastructure.csproj
+++ b/Remotion/Web/Development.WebTesting.TestSite.Infrastructure/Web.Development.WebTesting.TestSite.Infrastructure.csproj
@@ -25,7 +25,7 @@
     <ProjectReference Include="..\Core\Web.Core.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
-    <PackageReference Include="System.Text.Json" Version="8.0.3" />
+    <PackageReference Include="System.Text.Json" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
