RM-9125 Use package source mapping

--- a/Remotion/Core/Core/Core.Core.csproj
+++ b/Remotion/Core/Core/Core.Core.csproj
@@ -18,8 +18,8 @@
     <Compile Include="..\..\..\SharedSource\Core\RoslynAnnotations\NullableAnnotations.cs" Link="SharedSource\RoslynAnnotations\NullableAnnotations.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.15" />
-    <PackageReference Include="CommonServiceLocator" Version="2.0.6" />
+    <PackageReference Include="log4net" />
+    <PackageReference Include="CommonServiceLocator" />
     <PackageReference Remove="JetBrains.Annotations" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
