--- a/Remotion/Web/Development.WebTesting.IntegrationTests.Infrastructure/Web.Development.WebTesting.IntegrationTests.Infrastructure.csproj
+++ b/Remotion/Web/Development.WebTesting.IntegrationTests.Infrastructure/Web.Development.WebTesting.IntegrationTests.Infrastructure.csproj
@@ -16,7 +16,7 @@
     <ProjectReference Include="..\..\Web\Development.WebTesting\Web.Development.WebTesting.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
-    <PackageReference Include="System.Text.Json" Version="6.0.7" />
+    <PackageReference Include="System.Text.Json" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
