--- a/Remotion/Documentation/Core.Documentation.csproj
+++ b/Remotion/Documentation/Core.Documentation.csproj
@@ -12,7 +12,7 @@
     <PackageTags>$(PackageTags) Documentation</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Remotion.TypePipe.Documentation" version="3.0.0" />
+    <PackageReference Include="Remotion.TypePipe.Documentation" />
   </ItemGroup>
   <Import Project="..\..\Build\Shared.build.targets" />
 </Project>
