RM-9125 Use package source mapping

--- a/Remotion/Mixins/MixerTools.UnitTests/Mixins.MixerTools.UnitTests.csproj
+++ b/Remotion/Mixins/MixerTools.UnitTests/Mixins.MixerTools.UnitTests.csproj
@@ -25,7 +25,7 @@
     <ProjectReference Include="..\MixerTools\Mixins.MixerTools.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Remotion.TypePipe.Development" Version="3.0.0-alpha.1" />
+    <PackageReference Include="Remotion.TypePipe.Development" />
   </ItemGroup>
   <Import Project="..\..\..\Build\Shared.build.targets" />
 </Project>
