--- a/Remotion/Web/Development.WebTesting/Web.Development.WebTesting.csproj
+++ b/Remotion/Web/Development.WebTesting/Web.Development.WebTesting.csproj
@@ -22,11 +22,11 @@
     <ProjectReference Include="..\Contracts.DiagnosticMetadata\Web.Contracts.DiagnosticMetadata.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Fork.Coypu" Version="3.1.1.2" />
-    <PackageReference Include="Microsoft.Edge.SeleniumTools" Version="3.141.1" />
-    <PackageReference Include="log4net" Version="2.0.15" />
-    <PackageReference Include="Selenium.Support" Version="3.141.0" />
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Fork.Coypu" />
+    <PackageReference Include="Microsoft.Edge.SeleniumTools" />
+    <PackageReference Include="log4net" />
+    <PackageReference Include="Selenium.Support" />
+    <PackageReference Include="Selenium.WebDriver" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
     <Reference Include="System.Configuration" />
