--- a/SharedSource/Development/SharedSource.Development.csproj
+++ b/SharedSource/Development/SharedSource.Development.csproj
@@ -13,9 +13,9 @@
     <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Moq" Version="4.16.1" />
-    <PackageReference Include="Moq.VerifiableSequence" Version="4.16.1.1" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="Moq" />
+    <PackageReference Include="Moq.VerifiableSequence" />
+    <PackageReference Include="NUnit" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\SharedSource.Core.csproj" />
