--- a/SecurityManager/Clients.Web.Test.SetupDB/SecurityManager.Clients.Web.Test.SetupDB.csproj
+++ b/SecurityManager/Clients.Web.Test.SetupDB/SecurityManager.Clients.Web.Test.SetupDB.csproj
@@ -12,8 +12,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" />
+    <PackageReference Include="System.Data.SqlClient" />
   </ItemGroup>
   <Import Project="..\..\Build\Shared.build.targets" />
 </Project>
