RM-9103 Integrate NUKE build script

--- a/Remotion/ObjectBinding/Web.Development.WebTesting.IntegrationTests/App.config
+++ b/Remotion/ObjectBinding/Web.Development.WebTesting.IntegrationTests/App.config
@@ -26,6 +26,7 @@
       screenshotDirectory=".\WebTestingOutput"
       logsDirectory=".\WebTestingOutput"
       closeBrowserWindowsOnSetUpAndTearDown="false"
+      cleanUpUnmatchedDownloadedFiles="false"
       requestErrorDetectionStrategy="AspNet">
     <hosting name="IisExpress" type="IisExpress" port="60402" />
     <testSiteLayout rootPath=".\..\..\..\..\Web.Development.WebTesting.TestSite.NetFramework">
