--- a/Remotion/ObjectBinding/Web.IntegrationTests/App.config
+++ b/Remotion/ObjectBinding/Web.IntegrationTests/App.config
@@ -11,8 +11,6 @@
     <add key="ChromeVersionArchive" value="" />
     <add key="EdgeVersionArchive" value="" />
     <add key="FirefoxVersionArchive" value="" />
-    <!-- Only used by re-motion build script to define log sub directory -->
-    <add key="BuildLogOutputSubDirectoryName" value="ObjectBinding.Web.IntegrationTests" />
   </appSettings>
   <remotion.webTesting
       xmlns="http://www.re-motion.org/WebTesting/Configuration/2.0"
@@ -25,6 +23,7 @@
       screenshotDirectory=".\WebTestingOutput"
       logsDirectory=".\WebTestingOutput"
       closeBrowserWindowsOnSetUpAndTearDown="false"
+      cleanUpUnmatchedDownloadedFiles="false"
       requestErrorDetectionStrategy="AspNet">
     <hosting name="IisExpress" type="IisExpress" port="60402" />
     <testSiteLayout rootPath=".\..\..\..\..\Web.Development.WebTesting.TestSite.NetFramework">
